--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
 #awesome-books {
-  width: 300px;
+  width: 500px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.new-book {
-  list-style-type: none;
-  border-bottom: 1px solid #ccc;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-left: -39px;
-  max-width: 300px;
+form {
+  margin-left: auto;
+  margin-right: auto;
 }
