--- a/style.css
+++ b/style.css
@@ -12,3 +12,10 @@ form {
 .oddBook:nth-child(odd) {
   background-color: #ddd;
 }
+
+/* footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  margin-top: 100px;
+} */
