--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ form {
   background-color: #ddd;
 }
 
-/* footer {
+footer {
   position: relative;
   bottom: 0;
   width: 100%;
   margin-top: 100px;
-} */
+}
